kubernetes/apps/default/dozzle/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dozzle
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: network
      sectionName: https
  hostnames:
    - dozzle.lab.egenintres.se
  rules:
    - backendRefs:
        - name: dozzle
          port: 8080
